--- a/APP/app.json
+++ b/APP/app.json
@@ -1,33 +1,31 @@
 {
-  "expo": {
-    "name": "minegood",
-    "slug": "minegood",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-	"ios": {
-      "bundleIdentifier": "com.yougunwoo.minegood",
-      "buildNumber": "1.0.0",
-	  "supportsTablet": true
-    },
-    "android": {
-      "package": "com.yougunwoo.minegood",
-      "versionCode": 1,
-	  "permissions":["CAMERA","READ_EXTERNAL_STORAGE"]
-    }
-  }
+	"expo": {
+		"name": "ArmyLens",
+		"slug": "ArmyLens",
+		"version": "1.0.0",
+		"orientation": "portrait",
+		"icon": "./assets/icon.png",
+		"splash": {
+			"image": "./assets/splash.png",
+			"resizeMode": "contain",
+			"backgroundColor": "#ffffff"
+		},
+		"updates": {
+			"fallbackToCacheTimeout": 0
+		},
+		"assetBundlePatterns": ["**/*"],
+		"web": {
+			"favicon": "./assets/favicon.png"
+		},
+		"ios": {
+			"bundleIdentifier": "com.armylens.armylens",
+			"buildNumber": "1.0.0",
+			"supportsTablet": true
+		},
+		"android": {
+			"package": "com.armylens.armylens",
+			"versionCode": 1,
+			"permissions": ["CAMERA", "READ_EXTERNAL_STORAGE"]
+		}
+	}
 }
